--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,10 +1,7 @@
-FROM python:3.8.2
+FROM python:3.12.0-slim-bookworm
 
 ENV PYTHONBUFFERED 1
 ENV PYTHONWRITEBYTECODE 1
-
-RUN apt-get update \
-    && apt-get install -y netcat
 
 ENV APP=/app
 
@@ -13,7 +10,7 @@ WORKDIR $APP
 
 # Install the requirements
 COPY requirements.txt $APP
-RUN pip install --upgrade pip
+
 RUN pip install -r requirements.txt
 
 # Copy the rest of the files
@@ -22,6 +19,7 @@ COPY . $APP
 EXPOSE 8000
 
 RUN chmod +x /app/entrypoint.sh
-ENTRYPOINT ["/app/entrypoint.sh"]
+
+ENTRYPOINT ["/bin/bash","/app/entrypoint.sh"]
 
 CMD ["gunicorn", "--bind", ":8000", "--workers", "3", "djangobackend.wsgi"]
